Financial Analysis on budget_data

--- a/PyBank/main.ipynb
+++ b/PyBank/main.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "id": "d450b816-9103-471e-8a82-8949b4587b3b",
    "metadata": {},
    "outputs": [
@@ -63,13 +63,14 @@
     }
    ],
    "source": [
+    "#reading the CSV File\n",
     "budget_info = pd.read_csv(\"Resources/budget_data.csv\")\n",
     "print(budget_info)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 48,
    "id": "a7c77fc8-f343-4b1f-ab4c-c9c1474ed55f",
    "metadata": {},
    "outputs": [
@@ -82,16 +83,14 @@
     }
    ],
    "source": [
-    "header = \"Financial Analysis\"\n",
-    "\n",
-    "#total months\n",
+    "# Calculating number of months included in the dataset\n",
     "total_months = len(budget_info['Date'].unique())\n",
     "print(total_months)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 49,
    "id": "f6e3bb3e-4d1d-4823-b46d-74f716542f56",
    "metadata": {},
    "outputs": [
@@ -101,12 +100,13 @@
        "38382578"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#net total amount of Profit/Losses over the entire period\n",
     "total_amount = sum(budget_info['Profit/Losses'])\n",
     "total_amount"
    ]
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 50,
    "id": "98616ca1-f1a8-435c-8aef-3f36d66063c0",
    "metadata": {},
    "outputs": [
@@ -397,12 +397,13 @@
        "-2315.12"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#average of the changes in Profit/Losses over the entire period\n",
     "average = np.average(budget_info2['Profit/Losses'][1:])\n",
     "average = round(average,2)\n",
     "average"
@@ -410,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 51,
    "id": "fc3b04ea-b050-437c-bd44-2dd897c7704d",
    "metadata": {},
    "outputs": [
@@ -420,12 +421,13 @@
        "1926159"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#greatest increase in profits\n",
     "max_increase = np.max(budget_info2['Profit/Losses'])\n",
     "max_increase = round(max_increase)\n",
     "max_increase"
@@ -433,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 52,
    "id": "781653fd-f371-4c70-bef3-4085e5290cfb",
    "metadata": {},
    "outputs": [
@@ -443,20 +445,62 @@
        "-2196167"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#greatest decrease in losses\n",
     "max_decrease = round(np.min(budget_info2['Profit/Losses']))\n",
     "max_decrease"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "4a46f253-057c-4c07-ba1f-091fa0d968a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Financial Analysis\n",
+      "----------------------------\n",
+      "Total Months: 86\n",
+      "Total: $38382578\n",
+      "Average Change: $-2315.12\n",
+      "Greatest Increase in Profits: 1926159 ($1926159)\n",
+      "Greatest Decrease in Profits: -2196167 ($-2196167)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Adding financial analysis:\n",
+    "financial_analysis = [\"Financial Analysis\",\n",
+    "                      \"----------------------------\",\n",
+    "                      f\"Total Months: {str(total_months)}\",\n",
+    "                      f\"Total: ${str(total_amount)}\",\n",
+    "                      f\"Average Change: ${round(average, 2)}\",\n",
+    "                      f\"Greatest Increase in Profits: {max_increase} (${str(max_increase)})\",\n",
+    "                      f\"Greatest Decrease in Profits: {max_decrease} (${str(max_decrease)})\"]\n",
+    "\n",
+    "\n",
+    "for line in financial_analysis:\n",
+    "    print (line)\n",
+    "\n",
+    "# adding financial analysis to a README.txt:\n",
+    "with open('README.txt', 'w') as f:\n",
+    "    for line in financial_analysis:\n",
+    "        f.write(line)\n",
+    "        f.write(\"\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bcb5ccc1-0991-4765-b94f-77d3c4517e0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcb5ccc1-0991-4765-b94f-77d3c4517e0f",
+   "id": "3f3a03a5-03c5-41ef-98a0-1931c10513af",
    "metadata": {},
    "outputs": [],
    "source": []
